--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,28 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
-bpyutils==0.5.2
-certifi==2020.12.5
-chardet==4.0.0
-Django==4.0.5
-django-appconf==1.0.4
-django-ckeditor==6.1.0
-django-debug-toolbar==3.2
-django-js-asset==1.2.2
-django-select2==7.7.1
-django-tinymce==3.3.0
-djangorestframework==3.12.2
+bpyutils==0.5.8
+certifi==2022.9.14
+chardet==5.0.0
+charset-normalizer==2.1.1
+Django==4.1.1
+django-appconf==1.0.5
+django-ckeditor==6.5.1
+django-debug-toolbar==3.6.0
+django-js-asset==2.0.0
+django-select2==7.10.1
+django-tinymce==3.5.0
+djangorestframework==3.13.1
 docopt==0.6.2
-idna==2.10
-mysqlclient==2.0.3
-phonenumbers==8.12.31
-Pillow==8.1.0
+idna==3.4
+mysqlclient==2.1.1
+phonenumbers==8.12.55
+Pillow==9.2.0
 pipreqs==0.4.11
 pipupgrade==1.12.0
-pytz==2020.5
-requests==2.25.1
-shortuuid==1.0.1
-sqlparse==0.4.1
-tzdata==2022.1
-urllib3==1.26.3
+pytz==2022.2.1
+requests==2.28.1
+shortuuid==1.0.9
+sqlparse==0.4.2
+tzdata==2022.2
+urllib3==1.26.12
 yarg==0.1.9
