--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,27 @@
-asgiref==3.5.2
-backports.zoneinfo==0.2.1
+asgiref==3.7.2
 bpyutils==0.5.8
-certifi==2022.9.14
-chardet==5.0.0
-charset-normalizer==2.1.1
-Django==4.1.1
-django-appconf==1.0.5
-django-ckeditor==6.5.1
-django-debug-toolbar==3.6.0
-django-js-asset==2.0.0
+certifi==2023.11.17
+chardet==5.2.0
+charset-normalizer==3.3.2
+Django==5.0.1
+django-appconf==1.0.6
+django-ckeditor==6.7.0
+django-debug-toolbar==4.2.0
+django-js-asset==2.2.0
 django-select2==7.10.1
-django-tinymce==3.5.0
+django-tinymce==3.6.1
 djangorestframework==3.13.1
 docopt==0.6.2
-idna==3.4
-mysqlclient==2.1.1
-phonenumbers==8.12.55
-Pillow==9.2.0
+idna==3.6
+mysqlclient==2.2.1
+phonenumbers==8.13.29
+pillow==10.2.0
 pipreqs==0.4.11
 pipupgrade==1.12.0
-pytz==2022.2.1
-requests==2.28.1
-shortuuid==1.0.9
-sqlparse==0.4.2
-tzdata==2022.2
-urllib3==1.26.12
+pytz==2023.4
+requests==2.31.0
+shortuuid==1.0.11
+sqlparse==0.4.4
+tzdata==2023.4
+urllib3==2.1.0
 yarg==0.1.9
