--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 .gitignore
+.idea/
 __pycache__/
 venv/
-ServiceCRM3/settings3.py
+ServiceCRM3/settings.py
