--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,28 @@
-asgiref==3.7.2
-bpyutils==0.5.8
-certifi==2023.11.17
-chardet==5.2.0
-charset-normalizer==3.3.2
-Django==5.0.1
-django-appconf==1.0.6
-django-ckeditor==6.7.0
-django-debug-toolbar==4.2.0
-django-js-asset==2.2.0
-django-select2==7.10.1
-django-tinymce==3.6.1
-djangorestframework==3.13.1
-docopt==0.6.2
-idna==3.6
-mysqlclient==2.2.1
-phonenumbers==8.13.29
-pillow==10.2.0
-pipreqs==0.4.11
-pipupgrade==1.12.0
-pytz==2023.4
-requests==2.31.0
-shortuuid==1.0.11
-sqlparse==0.4.4
-tzdata==2023.4
-urllib3==2.1.0
-yarg==0.1.9
+asgiref
+bpyutils
+certifi
+chardet
+charset-normalizer
+Django
+django-appconf
+django-ckeditor
+django-debug-toolbar
+django-js-asset
+django-select2
+django-tinymce
+django-redis
+djangorestframework
+docopt
+idna
+mysqlclient
+phonenumbers
+pillow
+pipreqs
+pipupgrade
+pytz
+requests
+shortuuid
+sqlparse
+tzdata
+urllib3
+yarg
