--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,77 @@
-asgiref
-bpyutils
-certifi
-chardet
-charset-normalizer
-Django
-django-appconf
-django-ckeditor
-django-debug-toolbar
-django-js-asset
-django-select2
-django-tinymce
-django-redis
-djangorestframework
-docopt
-idna
-mysqlclient
-phonenumbers
-pillow
-pipreqs
-pipupgrade
-pytz
-requests
-shortuuid
-sqlparse
-tzdata
-urllib3
-yarg
+asgiref==3.8.1
+asttokens==2.4.1
+async-timeout==4.0.3
+attrs==23.2.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+bpyutils==0.5.8
+certifi==2024.7.4
+chardet==5.2.0
+charset-normalizer==3.3.2
+colorama==0.4.6
+decorator==5.1.1
+defusedxml==0.7.1
+Django==5.0.6
+django-appconf==1.0.6
+django-ckeditor==6.7.1
+django-debug-toolbar==4.4.5
+django-js-asset==2.2.0
+django-redis==5.4.0
+django-select2==8.2.0
+django-tinymce==4.1.0
+djangorestframework==3.15.2
+docopt==0.6.2
+executing==2.0.1
+fastjsonschema==2.20.0
+idna==3.7
+ipython==8.12.3
+jedi==0.19.1
+Jinja2==3.1.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
+mistune==3.0.2
+mysqlclient==2.2.4
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+numpy==2.1.3
+packaging==24.1
+pandocfilters==1.5.1
+parso==0.8.4
+phonenumbers==8.13.40
+pickleshare==0.7.5
+pillow==10.4.0
+pipreqs==0.5.0
+pipupgrade==1.12.0
+platformdirs==4.2.2
+prompt_toolkit==3.0.47
+psycopg2==2.9.10
+pure-eval==0.2.2
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+pyzmq==26.0.3
+redis==5.0.7
+referencing==0.35.1
+requests==2.32.3
+rpds-py==0.18.1
+shortuuid==1.0.13
+six==1.16.0
+soupsieve==2.5
+sqlparse==0.5.0
+stack-data==0.6.3
+tinycss2==1.3.0
+tornado==6.4.1
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+wcwidth==0.2.13
+webencodings==0.5.1
+yarg==0.1.9
