--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
   kvadrober:  # Название вашего приложения на Python
     build: .
     image: crm3:latest
-    container_name: cmr3_container
+    container_name: crm3_container
     environment:
       - DATABASE_NAME=postgres
       - DATABASE_USER=crm3
