--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ certifi==2024.7.4
 chardet==5.2.0
 charset-normalizer==3.3.2
 colorama==0.4.6
+DAWG-Python==0.7.2
 decorator==5.1.1
 defusedxml==0.7.1
 Django==5.0.6
@@ -42,9 +43,9 @@ nbconvert==7.16.4
 nbformat==5.10.4
 numpy==2.1.3
 packaging==24.1
+pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
-pymorphy2==0.9.1
 phonenumbers==8.13.40
 pickleshare==0.7.5
 pillow==10.4.0
@@ -55,6 +56,8 @@ prompt_toolkit==3.0.47
 psycopg2==2.9.10
 pure-eval==0.2.2
 Pygments==2.18.0
+pymorphy2==0.9.1
+pymorphy2-dicts-ru==2.4.417127.4579844
 python-dateutil==2.9.0.post0
 pytz==2024.1
 pyzmq==26.0.3
@@ -75,5 +78,5 @@ tzdata==2024.1
 urllib3==2.2.2
 wcwidth==0.2.13
 webencodings==0.5.1
+XlsxWriter==3.2.0
 yarg==0.1.9
-xlsxwriter==3.2.0
