--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 amqp==5.3.1
-asgiref==3.8.1
+#asgiref==3.8.1
 asttokens==2.4.1
-async-timeout==4.0.3
+#async-timeout==4.0.3
 attrs==23.2.0
 backcall==0.2.0
 beautifulsoup4==4.12.3
 billiard==4.2.1
 bleach==6.1.0
 bpyutils==0.5.8
-celery==5.4.0
+celery
 certifi==2024.7.4
 chardet==5.2.0
 charset-normalizer==3.3.2
@@ -94,13 +94,9 @@ wcwidth==0.2.13
 webencodings==0.5.1
 XlsxWriter==3.2.0
 yarg==0.1.9
-sqlalchemy
-asyncpg
-aiohttp
-aiomisc
-gevent
-eventlet
-uvloop
-celery[py-async]
+#sqlalchemy
+#asyncpg
+#aiohttp
+#aiomisc
 
 
