--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ defusedxml==0.7.1
 Django==5.0.6
 django-appconf==1.0.6
 django-celery-beat==2.7.0
-django-ckeditor==6.7.1
+django-ckeditor-5==0.2.15
 django-debug-toolbar==4.4.5
 django-js-asset==2.2.0
 django-redis==5.4.0
@@ -94,9 +94,12 @@ wcwidth==0.2.13
 webencodings==0.5.1
 XlsxWriter==3.2.0
 yarg==0.1.9
+django-tenants
 #sqlalchemy
 #asyncpg
 #aiohttp
 #aiomisc
+
+
 
 
